--- a/src/components/game/field/character.module.scss
+++ b/src/components/game/field/character.module.scss
@@ -55,6 +55,4 @@
   &.back{
     transform: scale(1.3);
   }
-  margin-top: 3rem;
-  margin-bottom: 3rem;
 }
