--- a/src/components/game/switch/switch.module.scss
+++ b/src/components/game/switch/switch.module.scss
@@ -45,7 +45,6 @@
   align-items: center;
   justify-content: flex-end;
   overflow: hidden;
-  margin-top: 10%;
   &.modal {
     flex-direction: row;
     justify-content: space-around;
